--- a/templates/home.html
+++ b/templates/home.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='estilo.css')}}"></link>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     
   </head>
   
   <body>
-    <div id="container">  
-      <h1>Carreiras em Python</h1>
-      <img id='banner'src="{{url_for('static', filename='carreira.jpg')}}"/>
-      <h2>Sobre o site</h2>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <div class="container">  
+      <h1 class='text-center mt-2 mb-2'>Carreiras em Python</h1>
+      <img class="img-fluid" src="{{url_for('static', filename='carreira.jpg')}}"/>
+      <h2 class="text-center mt-2">Sobre o site</h2>
+      <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
     
-      <h2>Vagas Abertas</h2>
+      <h2 class="text-center">Vagas Abertas</h2>
       <p>Aqui serão retornadas as vagas sobre a Linguagem python</p>
-      <div style="text-align: center">
-        <button>Entrar em contato</button>
+      <div class="text-center">
+        <button class="btn btn-primary btn-lg">Entrar em contato</button>
       </div>
         
     </div>
