--- a/templates/home.html
+++ b/templates/home.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    
   </head>
   
   <body>
+    {% include 'includes/navbar.html' %}
     <div class="container">  
       <h1 class='text-center mt-2 mb-2'>Carreiras em Python</h1>
       <img class="img-fluid" src="{{url_for('static', filename='carreira.jpg')}}"/>
@@ -26,9 +26,9 @@
       </p>
       
       <div class="text-center">
-        <button class="btn btn-primary btn-lg">Entrar em contato</button>
+        <a href='mailto:someone@yoursite.com' class="btn btn-primary btn-lg" href>Entrar em contato</a>
       </div>
-        
     </div>
+    {% include 'includes/footer.html' %}
   </body>
 </html>
